--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-RAPIDAPI_KEY=your_rapidapi_key_here
+# .env.example
+# Yahoo Finance API (RapidAPI)
+RAPIDAPI_KEY=your-rapidapi-key-here
+
+# Add these to your .env.local file with actual values
+# You can get a RapidAPI key from: https://rapidapi.com/apidojo/api/yahoo-finance1/
