Replace Yahoo Finance API with free alternative service that doesn't require API keys

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # .env.example
-# Yahoo Finance API (RapidAPI)
-RAPIDAPI_KEY=your-rapidapi-key-here
+# This dashboard now works without any API keys!
+# All stock data is provided through free APIs and demo data
 
-# Add these to your .env.local file with actual values
-# You can get a RapidAPI key from: https://rapidapi.com/apidojo/api/yahoo-finance1/
+# No environment variables required for basic functionality
+# The app will work immediately after installation
+
+# Optional: You can add your own API keys here if you want to integrate
+# with premium financial data services in the future
+# CUSTOM_API_KEY=your-custom-api-key-here
